# cpp-template

./: .clang-format  .clang-tidy  .gitignore  .travis.yml  CMakeLists.txt  README.md  appveyor.yml  build  build.bat  cpp-template-installer.py
bench/: CMakeLists.txt  bench_main.cpp  string_bench.cpp
src/: CMakeLists.txt  hello.cpp  hello.h  main.cpp
test/: CMakeLists.txt  hello_test.cpp
tools/: bench  bench-win32.bat  bench-win64.bat  build-asan  build-debug  build-release  build-tsan  build-ubsan  build-win32-debug.bat  build-win32-release.bat  build-win64-debug.bat  build-win64-release.bat  format  sanitize  tidy  watch
